| Bug #5151 | Views: View using dropped function: crashes | ||
|---|---|---|---|
| Submitted: | 23 Aug 2004 1:03 | Modified: | 6 Sep 2004 13:44 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[23 Aug 2004 1:03]
Peter Gulutzan
[1 Sep 2004 18:01]
Oleksandr Byelkin
ChangeSet 1.1741 04/09/01 19:00:41 bell@sanja.is.com.ua +7 -0 adding mysql.proc to table list if view contains stored procedures (BUG#5151)
[6 Sep 2004 13:44]
Oleksandr Byelkin
Thank you for bugreport! This bug is fixed and patch for it pushed into source repository.
