adding mysql.proc to table list if view contains stored procedures (BUG#5151)